use order instead of flex-direction to prevent content from being right aligned when there is no sidebar

--- a/src/scss/components/_page.scss
+++ b/src/scss/components/_page.scss
@@ -4,16 +4,15 @@
 
 .page__row {
   @include make-row();
-
-  @include media(md) {
-    flex-direction: row-reverse;
-  }
 }
 
 .page__nav {
+  flex: 1;
+
   @include media(md) {
     @include make-col-ready();
     @include make-col(4);
+    order: 1;
   }
 
   @include media(lg) {
@@ -26,6 +25,7 @@
 
   @include media(md) {
     @include make-col(8);
+    // flex: 0 0 auto;
   }
 
   @include media(lg) {
